<resources>
    <string name="app_name">MathGuru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_basic">Basic Level</string>
    <string name="action_advanced">Advanced Level</string>
    <string name="action_professional">Professional Level</string>
    <string name="action_expert">Expert Level</string>
    <string name="action_settings">Settings</string>
</resources>
